[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/Nexa-Heavy.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 639.625, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_right = -100.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 3 )
text = "Test"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_right = 100.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 4 )
text = "Test"
align = 1
valign = 1

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = -200.0
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
custom_fonts/font = SubResource( 5 )
text = "Countdown"
align = 1
valign = 1

[node name="PLayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 45, 332 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 740 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 640, -10 )
shape = SubResource( 1 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -25, 360 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 1305, 360 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
